; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_statscmds.c_RemoveStatisticsById.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_statscmds.c_RemoveStatisticsById.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@StatisticExtDataRelationId = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@STATEXTDATASTXOID = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"cache lookup failed for statistics data %u\00", align 1
@StatisticExtRelationId = common dso_local global i32 0, align 4
@STATEXTOID = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [45 x i8] c"cache lookup failed for statistics object %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RemoveStatisticsById(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* @StatisticExtDataRelationId, align 4
  %8 = load i32, i32* @RowExclusiveLock, align 4
  %9 = call i32 @table_open(i32 %7, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @STATEXTDATASTXOID, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @ObjectIdGetDatum(i32 %11)
  %13 = call %struct.TYPE_7__* @SearchSysCache1(i32 %10, i32 %12)
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** %4, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = call i32 @HeapTupleIsValid(%struct.TYPE_7__* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %1
  %18 = load i32, i32* @ERROR, align 4
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @elog(i32 %18, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %17, %1
  %22 = load i32, i32* %3, align 4
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = call i32 @CatalogTupleDelete(i32 %22, i32* %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %27 = call i32 @ReleaseSysCache(%struct.TYPE_7__* %26)
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* @RowExclusiveLock, align 4
  %30 = call i32 @table_close(i32 %28, i32 %29)
  %31 = load i32, i32* @StatisticExtRelationId, align 4
  %32 = load i32, i32* @RowExclusiveLock, align 4
  %33 = call i32 @table_open(i32 %31, i32 %32)
  store i32 %33, i32* %3, align 4
  %34 = load i32, i32* @STATEXTOID, align 4
  %35 = load i32, i32* %2, align 4
  %36 = call i32 @ObjectIdGetDatum(i32 %35)
  %37 = call %struct.TYPE_7__* @SearchSysCache1(i32 %34, i32 %36)
  store %struct.TYPE_7__* %37, %struct.TYPE_7__** %4, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %39 = call i32 @HeapTupleIsValid(%struct.TYPE_7__* %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %45, label %41

41:                                               ; preds = %21
  %42 = load i32, i32* @ERROR, align 4
  %43 = load i32, i32* %2, align 4
  %44 = call i32 @elog(i32 %42, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i32 %43)
  br label %45

45:                                               ; preds = %41, %21
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %47 = call i64 @GETSTRUCT(%struct.TYPE_7__* %46)
  %48 = inttoptr i64 %47 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %48, %struct.TYPE_8__** %5, align 8
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  store i32 %51, i32* %6, align 4
  %52 = load i32, i32* %6, align 4
  %53 = call i32 @CacheInvalidateRelcacheByRelid(i32 %52)
  %54 = load i32, i32* %3, align 4
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  %57 = call i32 @CatalogTupleDelete(i32 %54, i32* %56)
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %59 = call i32 @ReleaseSysCache(%struct.TYPE_7__* %58)
  %60 = load i32, i32* %3, align 4
  %61 = load i32, i32* @RowExclusiveLock, align 4
  %62 = call i32 @table_close(i32 %60, i32 %61)
  ret void
}

declare dso_local i32 @table_open(i32, i32) #1

declare dso_local %struct.TYPE_7__* @SearchSysCache1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i32 @HeapTupleIsValid(%struct.TYPE_7__*) #1

declare dso_local i32 @elog(i32, i8*, i32) #1

declare dso_local i32 @CatalogTupleDelete(i32, i32*) #1

declare dso_local i32 @ReleaseSysCache(%struct.TYPE_7__*) #1

declare dso_local i32 @table_close(i32, i32) #1

declare dso_local i64 @GETSTRUCT(%struct.TYPE_7__*) #1

declare dso_local i32 @CacheInvalidateRelcacheByRelid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
